// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add order form component should render error for invalid form submission 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      name="userId"
      onChange={[Function]}
      placeholder="UserId"
      type="text"
      value=""
    />
    <input
      name="price"
      onChange={[Function]}
      placeholder="Price £/kg"
      type="text"
      value=""
    />
    <input
      name="quantity"
      onChange={[Function]}
      placeholder="Quantity (kg)"
      type="text"
      value=""
    />
    <select
      name="type"
      onChange={[Function]}
      value="BUY"
    >
      <option
        value="BUY"
      >
        BUY
      </option>
      <option
        value="SELL"
      >
        SELL
      </option>
    </select>
    <button
      className="button"
    >
      Place Order
    </button>
  </form>
</div>
`;

exports[`Add order form component should render error for invalid form submission 2`] = `
<div>
  <p>
    Please fill in all fields of the form.
  </p>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      name="userId"
      onChange={[Function]}
      placeholder="UserId"
      type="text"
      value=""
    />
    <input
      name="price"
      onChange={[Function]}
      placeholder="Price £/kg"
      type="text"
      value=""
    />
    <input
      name="quantity"
      onChange={[Function]}
      placeholder="Quantity (kg)"
      type="text"
      value=""
    />
    <select
      name="type"
      onChange={[Function]}
      value="BUY"
    >
      <option
        value="BUY"
      >
        BUY
      </option>
      <option
        value="SELL"
      >
        SELL
      </option>
    </select>
    <button
      className="button"
    >
      Place Order
    </button>
  </form>
</div>
`;

exports[`Add order form component should render form 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      name="userId"
      onChange={[Function]}
      placeholder="UserId"
      type="text"
      value=""
    />
    <input
      name="price"
      onChange={[Function]}
      placeholder="Price £/kg"
      type="text"
      value=""
    />
    <input
      name="quantity"
      onChange={[Function]}
      placeholder="Quantity (kg)"
      type="text"
      value=""
    />
    <select
      name="type"
      onChange={[Function]}
      value="BUY"
    >
      <option
        value="BUY"
      >
        BUY
      </option>
      <option
        value="SELL"
      >
        SELL
      </option>
    </select>
    <button
      className="button"
    >
      Place Order
    </button>
  </form>
</div>
`;

exports[`Add order form component should render form correctly with order 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      name="userId"
      onChange={[Function]}
      placeholder="UserId"
      type="text"
      value=""
    />
    <input
      name="price"
      onChange={[Function]}
      placeholder="Price £/kg"
      type="text"
      value=""
    />
    <input
      name="quantity"
      onChange={[Function]}
      placeholder="Quantity (kg)"
      type="text"
      value=""
    />
    <select
      name="type"
      onChange={[Function]}
      value="BUY"
    >
      <option
        value="BUY"
      >
        BUY
      </option>
      <option
        value="SELL"
      >
        SELL
      </option>
    </select>
    <button
      className="button"
    >
      Place Order
    </button>
  </form>
</div>
`;
